fix: 입력창 간 간격 gap 설정 모든 페이지 성공적으로 적용
+ 로그인 페이지에서 기타 링크 텍스트의 위치와 색상 동일하게 적용됨

--- a/client/signup-project/src/components/common/Common.css
+++ b/client/signup-project/src/components/common/Common.css
@@ -102,8 +102,6 @@ p {
   color: rgba(34, 34, 34, 1);
 }
 
-
-
 .button_text {
   font-family: Pretendard Variable;
   font-weight: 500;
@@ -123,16 +121,21 @@ p {
   letter-spacing: -4%;
   text-align: center;
   color: rgba(51, 51, 51, 1);
-
 }
 
 #input_wrap {
   gap: 8px 0;
+  width: 416px;
+  display : flex;
+  flex-direction: column;
+   text-align: center;
 }
 
 #input_box {
-  gap: 24px 0;
+  gap: 24px;
   width: 416px;
+  display : flex;
+  flex-direction: column;
 }
 
 #line_box {
@@ -142,7 +145,7 @@ p {
 }
 
 h1 {
-  /*ex) 회원가입, 등 제목*/
+  /*ex) 회원가입, 등 제목 title*/
   width: 416px;
   height: 43px;
 
@@ -167,5 +170,4 @@ h1 {
 .check_image {
   width: 72px;
   height: 72px;
-
 }
